fix vh on iphone

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -86,9 +86,9 @@ h2 {
 .bid-modal {
 	z-index: 1;
 	position: fixed;
-	height: 85%;
+	height: -webkit-fill-available;
+	margin: 5% 0 15% 0 ;
 	width: 90vw;
-	margin: 5%;
 	background-color: white;
 	padding: 5%;
 	display: flex;
@@ -110,6 +110,7 @@ h2 {
 	background-color: rgba(128,128,128,0.5);
 	padding: 0;
 	margin: 0;
+	display: flex;
 	justify-content: center;
 }
 
